Se acorto unidad 4 de MI

--- a/3° Año/Metodología de la Investigación/1. Introducción.md
+++ b/3° Año/Metodología de la Investigación/1. Introducción.md
@@ -49,11 +49,13 @@ Las teorías científicas establecidas que forman parte del conocimiento cientí
 - **Sustentación**: Es sustentada por muchas evidencias en lugar de un único punto fundacional, lo que asegura que probablemente sea una buena aproximación, aunque no sea totalmente correcta.
 - **Verificabilidad**: Realiza predicciones verificables, que podrían ser usadas algún día incluso para refutarla.
 - **Testeada**: Ha pasado por muchos tests del mundo real que podrían haber demostrado que era falsa.
-- **Simplicidad**: Es la mejor explicación conocida en el sentido de la Navaja de Occam, es decir, siempre optar por la teoría o hipótesis más corta.
+- **Simplicidad**: Es la mejor explicación conocida en el sentido de la Navaja de Ockham, es decir, siempre optar por la teoría o hipótesis más corta.
 
 >[!tldr] Diferencias entre Hechos y Teorías
 >Un hecho es una verdad, una afirmación conforme la realidad o una serie de datos sustentados por un experimento científico. Mientras que una teoría es formulada, desarrollada y evaluada según el método científico, esto quiere decir que se pueden crear teorías siguiendo el procedimiento científico y al mismo tiempo ser falsas.
 
+>[!caution] Navaja de Ockham
+>El principio de la Navaja de Ockham es fundamental en la ciencia y la metodología de investigación. Se utiliza para abogar por la simplicidad en la formulación de teorías científicas y en la resolución de problemas. La Navaja de Ockham sugiere que, cuando se busca una explicación para un fenómeno, se deben evitar las explicaciones innecesariamente complejas. En la investigación y la formulación de teorías científicas, se busca simplificar y reducir al mínimo las suposiciones y las variables para llegar a una teoría elegante y efectiva.
 #### Investigación: Hipótesis
 
 Investigación es un proceso activo, donde las hipótesis ayudan a que las actividades tengan un norte al que apuntar. Las predicciones de estas hipótesis son testeadas por experimentos y resultan en el desarrollo de otras tecnologías. Es posible que en una investigación se deban testear y refutar varias hipótesis antes de resolver el problema.
