--- a/3° Año/Metodología de la Investigación/4. Investigación en Cs. de la Computación.md
+++ b/3° Año/Metodología de la Investigación/4. Investigación en Cs. de la Computación.md
@@ -1,119 +1,111 @@
-## Ciencias de la Computación
+# Ciencias de la Computación
 
-Las ***ciencias de la computación*** son el estudio de la teoría, la experimentación y la ingeniería que forman las bases para el diseño y uso de las computadoras. Son un conjunto de disciplinas que se ocupan de los fundamentos que sustentan la computación, eso incluye a los lenguajes de programación, los propios fundamentos matemáticos y lógicos de esta rama del conocimiento. Como área general, las ciencias de la computación tiene toda una serie de ramas específicas, como pueden ser la inteligencia artificial, computación gráfica, bioinformática o el campo de la computación ubicua, entre otras muchas esferas.
-Fundamentalmente, es el estudio sistemático de la factibilidad, estructura, expresión y mecanización de procedimientos metódicos o algoritmos que subyacen en la adquisición, representación, procesamiento, almacenamiento, comunicación y acceso a la información. Dicha información puede estar codificada en forma de bits en una memoria de computadora o especificada en una estructura de genes y proteínas en una célula biológica.
-Una diferencia importante de las Ciencias de la Computación respecto de ciencias más clásicas es el enfoque de creación de conocimiento. Al igual que las ciencias clásicas, la computación parte del paradigma general de la actividad científica, es decir, creación de hipótesis como modelos explicativos que son capaces de predecir acontecimientos. En el mundo de la informática este paradigma se proyecta en relación con el procesamiento de información. Sin embargo, la característica de los fenómenos es diferente.
-Esto hace que el enfoque cambie, en lugar de explicar un fenómeno, muchas veces buscamos que la computadora desarrolle nuevas habilidades, o mejore las existentes, esto se refleja en el objeto de conocimiento de las Ciencias de la Computación.
+Las ***ciencias de la computación*** es fundamentalmente el estudio sistemático de la factibilidad, estructura, expresión y mecanización de procedimientos metódicos o algoritmos que subyacen en la **adquisición**, **representación**, **procesamiento**, **almacenamiento**, **comunicación** y **acceso** a la información. Dicha información puede estar codificada en forma de bits en una memoria de computadora (Artificial) o especificada en una estructura de genes y proteínas en una célula biológica (Natural).
+Una diferencia importante de las Ciencias de la Computación respecto de ciencias más clásicas es el enfoque de creación de conocimiento, en el mundo de la informática este paradigma se proyecta en relación con el procesamiento de información. Esto hace que el enfoque cambie, en lugar de explicar un fenómeno, muchas veces buscamos que la computadora desarrolle nuevas habilidades, o que mejore las habilidades ya existentes.
 
 >[!quote] Cita
 >“*El estudio sistemático de los procesos algorítmicos que describen y transforman información: su teoría, análisis, diseño, eficiencia, implementación, algoritmos sistematizados y aplicación*.”
 
-Por lo tanto, en general Ciencias de la Computación como disciplina científica involucra:
-- La hipótesis de que se puede aumentar las capacidades de descripción/transformación de la información, se pueden desarrollar nuevas técnicas/algoritmos para la solución de problemas nuevos o viejos, con el fin de mejorar la eficiencia de las técnicas actuales.
+Por lo tanto, en general las Ciencias de la Computación como disciplina científica involucra:
+- La hipótesis de que se puede aumentar las capacidades de descripción/transformación de la información, desarrollando nuevas técnicas/algoritmos para la solución de problemas nuevos o viejos, con el fin de mejorar la eficiencia de las técnicas actuales.
 - Se construyen las herramientas adecuadas para el desarrollo de la hipótesis, se diseña el algoritmo, y se establecen las definiciones del objeto de estudio y se conjeturan las propiedades.
-- Se valida la hipótesis, se realizan multiples experimentos, y se realiza una demostración formal, realizando un análisis de complejidad, y se desarrolla las pruebas matemáticas de los resultados conjeturados.
+- Se valida la hipótesis, se realizan múltiples experimentos, y se realiza una demostración formal, realizando un análisis de complejidad, y se desarrolla las pruebas matemáticas de los resultados conjeturados.
 
-### Campos de Aplicación de las Ciencias de la Computación
+# Campos de Aplicación de las Ciencias de la Computación
 
 Nuestro trabajo como científicos en ciencias de la computación puede abarcar temáticas muy diversas, pero hay cuatro grandes áreas identificadas por la Junta de Acreditación en Ciencias de la Computación compuesta por la ACM y el IEEE.
 
-- Teoría de la computación: enfocado en responder preguntas fundamentales acerca de qué puede ser computado y qué cantidad de recursos son requeridos para ejecutar tales cómputos.
-- Algoritmos y estructuras de datos: Los algoritmos y las estructuras de datos son el estudio de métodos computacionales comúnmente usados, así como su eficiencia computacional.
-- Metodología y lenguajes de programación: se ocupa del diseño, implementación, análisis, caracterización y clasificación de los lenguajes de programación y sus características individuales.
-- Arquitectura de computadoras: es el diseño conceptual y la estructura operacional fundamental de un sistema de computadoras.
+- **Teoría de la computación**: enfocado en responder preguntas fundamentales acerca de qué puede ser computado y qué cantidad de recursos son requeridos para ejecutar tales cómputos.
+- **Algoritmos y estructuras de datos**: Los algoritmos y las estructuras de datos son el estudio de métodos computacionales comúnmente usados, así como su eficiencia computacional.
+- **Metodología y lenguajes de programación**: se ocupa del diseño, implementación, análisis, caracterización y clasificación de los lenguajes de programación y sus características individuales.
+- **Arquitectura de computadoras**: es el diseño conceptual y la estructura operacional fundamental de un sistema de computadoras.
 
 La Junta identifica una gran variedad de ámbitos susceptibles de ser atacados, de entre los cuales encontramos a las áreas de:
 
-- **Inteligencia Artificial**: busca “simular” (sintetizar) procesos tales como la resolución de problemas, toma de decisiones, la adaptación del medio ambiente, el aprendizaje y la comunicación que se encuentran en los seres humanos y los animales. Erróneamente asociada en la mente popular con el desarrollo robótico, sin embargo, el principal campo de aplicación práctica ha sido como un componente integrado en las áreas de desarrollo de software que requieren la comprensión y modelación computacional.
-- **Arquitectura de Computadoras**: involucra disciplinas de la ingeniería en computación y la ingeniería eléctrica, la selección y la interconexión de los componentes de hardware para crear los equipos que cumplen funciones, de rendimiento, y costes.
-- **Computación científica**: es el campo de estudio que trata con la construcción de modelos matemáticos y técnicas de análisis cuantitativos, así como el uso de computadoras para analizar y resolver problemas científicos. En el uso práctico, es típicamente la aplicación de simulación por ordenador y otras formas de cálculo a los problemas en diversas disciplinas científicas.
+- **Inteligencia Artificial**: busca “simular” (sintetizar) procesos tales como la resolución de problemas, toma de decisiones, la adaptación del medio ambiente, el aprendizaje y la comunicación que se encuentran en los seres humanos y los animales. No está asociada a la robótica, pero se utiliza en la construcción de robots
+- **Arquitectura de Computadoras**: involucra a las disciplinas de la ingeniería en computación y la ingeniería eléctrica, la selección y la interconexión de los componentes de hardware para crear los equipos que cumplen funciones, de rendimiento, y costes.
+- **Computación científica**: es el campo de estudio que trata con la construcción de modelos matemáticos y técnicas de análisis cuantitativos, así como el uso de computadoras para analizar y resolver problemas científicos. Se emplea la simulación de fenómenos complejos del ámbito científico.
 - **Redes**: gestionar la conectividad entre redes de computadoras a nivel mundial. Gestión de tráfico, protocolos de comunicación, medios de transmisión.
 - **Sistemas Concurrentes, Paralelos y Distribuidos**: estudio de la ejecución simultánea de procesos, y de la extensión de esto a varios ordenadores conectados a través de una red.
 - **Bases de Datos**: organizar, almacenar y recuperar grandes cantidades de datos de forma sencilla. Recuperación eficiente, minería de datos, consistencia de datos (CQA, BR).
-- **Ingeniería de software**: es el estudio del diseño, implementación y modificación del software con la finalidad de asegurarse de que es de alta calidad, asequible, fácil de mantener, y rápido de construir. Es un enfoque sistemático para el diseño de software, que implica la aplicación de prácticas de ingeniería de software. Calidad de Software, Patrones de buenas prácticas, coordinación y orquestación de servicios.
+- **Ingeniería de software**: es el estudio del diseño, implementación y modificación del software con la finalidad de asegurarse de que es de alta calidad, asequible, fácil de mantener, y rápido de construir. Es un enfoque sistemático para el diseño de software, que implica la aplicación de prácticas de ingeniería de software.
 - **Ciberseguridad**: se enfoca en la protección de la infraestructura computacional y todo lo relacionado con esta y, especialmente, la información contenida en una computadora o circulante a través de las redes de computadoras.
 - **Informática y Educación**: apoyo para la enseñanza y estimulación de varios sentidos en los niños y jóvenes, con el fin de desarrollar y adquirir aprendizaje a través de herramientas y aplicaciones.
 
-### Métodos de I+D en Ciencias de la Computación
+# Métodos de I+D en Ciencias de la Computación
 
-El objetivo de la ciencia es adquirir conocimientos, la elección del método adecuado que nos permita conocer o modelar la realidad es, por tanto, fundamental. Hay dos grandes grupos de métodos:
-
-- Lógicos: se basan en la utilización del pensamiento en sus funciones de deducción, análisis y síntesis.
-- Empíricos: se aproximan al conocimiento del objeto mediante el conocimiento directo y el uso de la experiencia
-
+El objetivo de la ciencia es adquirir conocimientos, la elección del método adecuado que nos permita conocer o modelar la realidad es, por tanto, fundamental. Hay dos grandes grupos de métodos, los ***lógicos*** que se basan en la utilización del pensamiento en sus funciones de deducción, análisis y síntesis. Y el ***empíricos*** los cuales se aproximan al conocimiento del objeto mediante el conocimiento directo y el uso de la experiencia.
 Los métodos se utilizan para abordar sus objetos de estudio, investigar los fenómenos que se presentan en el mundo real y explicar y justificar los desarrollos y/o la obtención de nuevos conocimientos.
-Las ***ciencias fácticas*** tienen por finalidad describir y explicar el conjunto de fenómenos de aquel sector de la realidad que recortan como su objeto de estudio. En cambio, las ***ciencias formales***, en un sentido general, tiene por finalidad el desarrollo y construcción de sistemas abstractos de pensamiento.
-No existe consenso en una clasificación general de métodos de investigación, la diversidad de clasificaciones queda de manifiesto al comparar las clasificaciones propuestas por distintos autores. Veremos una clasificación que responde principalmente a la postura que adopta el informático al investigar fenómenos o al abordar problemas reales o virtuales, estas clases no son necesariamente excluyentes.
-En general podemos clasificar a los métodos en dos grandes tipos, los métodos deductivos, que extraer consecuencias lógicas de enunciados dados. Y los métodos inductivos en donde intentamos ir de enunciados particulares a enunciados universales.
 
-##### Métodos Lógicos Deductivos
+>[!tldr] Tipos de Ciencias
+>Las ***ciencias fácticas*** tienen por finalidad describir y explicar el conjunto de fenómenos de aquel sector de la realidad que recortan como su objeto de estudio. En cambio, las ***ciencias formales***, en un sentido general, tiene por finalidad el desarrollo y construcción de sistemas abstractos de pensamiento.
 
-Consiste en extraer consecuencias lógicas de enunciados dados. Esto es, en deducir conclusiones a partir de premisas, aplicando en cada paso una regla de inferencia, utilizando axiomas como punto de partida y a partir de ellos se deducen otros, llamados teoremas, mediante la aplicación de reglas de inferencia, que garantizan que si los axiomas son verdaderos, entonces los teoremas también lo son. Se trata entonces de ir de la causa al efecto. Este método a su vez se puede separar en dos premisas, los métodos deductivos directos y los indirectos (ver ejemplos en las filminas).
+No hay consenso en una clasificación general de métodos de investigación.  Veremos una clasificación que responde principalmente a la postura que adopta el informático al investigar fenómenos o al abordar problemas reales o virtuales. Cabe clarar que estas clases no son necesariamente excluyentes entre si.
 
-##### Métodos Lógicos Inductivos
+## Métodos Lógicos
 
-Este método pasa de enunciados singulares (particulares), tales como descripciones de los resultados de observaciones o experimentos, a enunciados universales, tales como hipótesis o teorías. El método inductivo va del efecto a la causa, de lo particular a lo general, Es analítico, retrospectivo y empírico, ya que toma casos para hacer inferencias. Existen los métodos de inducción completa, en donde la conclusión se obtiene de todos los elementos que forman el objeto de investigación; y los métodos de inducción incompleta, donde los elementos del objeto de investigación no pueden ser estudiados en su totalidad, se necesita muestras representativas para hacer generalizaciones.
+#### Métodos Lógicos Formales
 
-##### Métodos Lógicos de Soporte
+- **Métodos Lógicos Deductivos**: La lógica deductiva consiste en deducir conclusiones a partir de premisas usando reglas de inferencia y axiomas como punto de partida. Si los axiomas son verdaderos, los teoremas también lo son. Este método a su vez se puede separar en dos premisas, los métodos deductivos directos, donde se parte de una premisa y se llega a una conclusión. Y los indirectos donde se utilizan y aplican reglas de inferencia.
+- **Métodos Lógicos Inductivos**: El método inductivo parte de enunciados particulares, como observaciones o experimentos, hacia enunciados universales, como hipótesis o teorías. Va de lo particular a lo general, utilizando casos para hacer inferencias. Este método a su vez se puede separar en dos enfoques, la inducción completa (conclusión a partir de todos los elementos que conforman el objeto de estudio). Y la inducción incompleta (generalizaciones basadas en muestras representativas).
+#### Métodos Lógicos de Soporte
 
 Son los métodos que utiliza la informática para abordar los fenómenos y resolver las situaciones problemáticas, este método comprende distintas variantes, entre ellas encontramos:
 
-- **Método Analógico**: Hace uso de analogías, a partir de la semejanza de algunas características entre dos objetos, se infiere que las características restantes son semejantes. Va de lo particular a lo particular, es decir, de un caso a otro. Es un esquema de razonamiento que no posee un alto grado de certeza, susceptible de falacias.
-- **Método Analítico**: El método analítico es un método que implica análisis. Esto implica realizar una división del todo en partes, con el objeto de estudiarlas y analizarlas por separado. Descomponiendo una idea o un objeto en sus elementos; descompone un todo en sus elementos básicos, por tanto, va de lo general a lo específico. Va de lo concreto a lo abstracto, ya que se parte del todo que es un concreto real, y se pasa a las partes, que son la parte abstracta.
-- **Método Sintético**: Contrario al método analítico, el método sintético implica la síntesis. Así, en el método sintético, es necesario reunir diversos elementos para lograr formar un todo. Reunión racional de varios elementos en una nueva totalidad. Se realiza sobre la base de los resultados del análisis.
-- **Método Sistémico**: Estudio de los sistemas en su totalidad, complejidad y dinámica propia. Es un proceso mediante el cual se relacionan hechos aparentemente aislados y se formula una teoría que unifica los diversos elementos. Consiste en la reunión racional de varios elementos dispersos en una nueva totalidad, este se presenta más en el planteamiento de la hipótesis.
+- **Método Analógico**: Hace uso de analogías, a partir de la semejanza de algunas características entre dos objetos. Va de lo particular a lo particular, es decir, de un caso a otro. Es un esquema de razonamiento que no posee un alto grado de certeza, susceptible de falacias.
+- **Método Analítico**: El método analítico es un método que implica análisis, esto implica la descomposición de una idea o un objeto en sus elementos; descompone un todo en sus elementos básicos, por tanto, va de lo general a lo específico. Va de lo concreto a lo abstracto, ya que se parte del todo que es un concreto real, y se pasa a las partes, que son la parte abstracta.
+- **Método Sintético**: Contrario al método analítico, el método sintético implica la síntesis, esto implica la reunión racional de varios elementos en una nueva totalidad. Se realiza sobre la base de los resultados del análisis.
+- **Método Sistémico**: Estudio de los sistemas en su totalidad, complejidad y dinámica propia, esto implica la reunión racional de varios elementos dispersos en una nueva totalidad, este se presenta más en el planteamiento de la hipótesis.
 - **Método de Modelado**: La modelación es el proceso mediante el cual se crea una representación o modelo para investigar la realidad. Se crean abstracciones con el propósito de explicar la realidad. El modelo es el sustituto del objeto de investigación. Se constituye una reproducción simplificada de la realidad que cumple una función heurística que permite descubrir nuevas relaciones y cualidades del objeto de estudio. Todas las inferencias e hipótesis se plantearán sobre el modelo.
 
-##### Método Hipotético Deductivo
+## Método Hipotético Deductivo
 
-Se basa en la formulación de hipótesis que debe ser contrastada, es decir, puesta a prueba mediante su confrontación con la experiencia. Formula hipótesis y de ellas deduce consecuencias observacionales. Esto es:
+Se basa en la formulación de hipótesis que debe ser contrastada, es decir, puesta a prueba mediante su confrontación con la experiencia. Esto es:
 
-- Detección de problema: ve un efecto para el que no se conoce la causa
-- Formulación de hipótesis: hipotetiza acerca de la misma
-- Deducción de consecuencias observables: deducciones adicionales observables de la hipótesis
-- Experimento: contrastación de las deducciones contra la realidad
+- Detección de problema: ve un efecto para el que no se conoce la causa.
+- Formulación de hipótesis: hipotetiza acerca de la misma.
+- Deducción de consecuencias observables: deducciones adicionales observables de la hipótesis.
+- Experimento: contrastación de las deducciones contra la realidad.
 
 Para Bunge las hipótesis y teorías pueden ser empíricas o teóricamente contrastables.
 
-##### Método Empírico
+## Método Empírico
 
-Se refiere a cualquier investigación fundada en la experimentación u observación, conducida generalmente a responder una pregunta específica o hipótesis. La palabra empírica significa que la información es obtenida meramente mediante experiencia, observación y/o experimentación. Dentro de los métodos empíricos, se encuentran los métodos cuantitativos, cualitativos y los métodos mixtos, la diferencia fundamental entre ambas metodologías es que la cuantitativa estudia la asociación o relación entre variables cuantificadas y la cualitativa lo hace en contextos estructurales y situacionales.
+La investigación empírica se basa en experimentación u observación para responder preguntas específicas o probar hipótesis. Se distinguen métodos cuantitativos y cualitativos, donde los primeros analizan variables cuantificadas y los segundos se enfocan en contextos y situaciones.
 
-###### Método Empírico Cuantitativo
+#### Método Empírico Cuantitativo
 
 Son aquellos en los que se recogen y analizan datos cuantitativos sobre variables. La investigación cuantitativa trata de determinar la fuerza de asociación o correlación entre variables, la generalización y objetivación de los resultados a través de distintas técnicas, tras el estudio de la asociación o correlación pretende, a su vez, hacer inferencia causal que explique por qué las cosas suceden o no de una forma determinada. Se dividen en:
-- Experimentales controlados: Manipulan variables independientes.
-	- Replicación: Desarrollo de múltiples versiones de un producto, medir diferencias e hipotetizar sobre las posibles causas.
-	- Sintético: Reproducir un factor en entornos específicos, y sacar conclusiones acerca de la diferencia.
-	- Análisis Dinámico: involucra la medición de performance, y las variaciones de la misma. Suele verse en papers de aplicación, donde se mide la eficiencia de diferentes algoritmos en distintos escenarios.
-	- Simulación: utilizar datos artificiales para testear el modelado realizado. Suele verse en papers de aplicación, donde se utilizan repositorios de datos creados artificialmente para hacer un primer testeo de la técnica a utilizar.
-- Observacionales: Recogen los datos relevantes mediante diferentes técnicas.
-	- Análisis estático: examinar completamente las diferentes partes que hacen a la estructura de un producto, hipotetizando causas para efectos bajo estudio.
-	- Monitoreo de proyectos: se realiza el deploy de un proyecto y luego se observa el comportamiento del mismo en el mundo real, así como el impacto del mismo en el mundo.
-	- Surveys: realizar encuestas y cuestionarios tratando de identificar características preponderantes del objeto de estudio, para modelar el estado actual de eventos. En ciencias de la computación podríamos desarrollar una herramienta basada en argumentación que sirva para modelar que puntos clave influir para cambiar la opinión pública. Las encuestas servirían tanto para entender a que debemos prestar atención como para validar luego los resultados.
-	- Caso de estudio: similar al monitoreo de proyectos, pero realizado con una profundidad mucho mayor.
-	- Estudio de Campo: chequear múltiples proyectos, de diversa naturaleza, y testear un aspecto común entre estos para distinguir diferencias en comportamiento.
+- **Experimentales controlados**: Manipulan variables independientes.
+	- **Replicación**: Desarrollo de múltiples versiones de un producto, medir diferencias e hipotetizar sobre las posibles causas.
+	- **Sintético**: Reproducir un factor en entornos específicos, y sacar conclusiones acerca de la diferencia.
+	- **Análisis Dinámico**: involucra la medición de performance, y las variaciones de la misma. Suele verse en papers de aplicación, donde se mide la eficiencia de diferentes algoritmos en distintos escenarios.
+	- **Simulación**: utilizar datos artificiales para testear el modelado realizado. Suele verse en papers de aplicación, donde se utilizan repositorios de datos creados artificialmente para hacer un primer testeo de la técnica a utilizar.
+- **Observacionales**: Recogen los datos relevantes mediante diferentes técnicas.
+	- **Análisis estático**: examinar completamente las diferentes partes que hacen a la estructura de un producto, hipotetizando causas para efectos bajo estudio.
+	- **Monitoreo de proyectos**: se realiza el deploy de un proyecto y luego se observa el comportamiento del mismo en el mundo real, así como el impacto del mismo en el mundo.
+	- **Surveys**: realizar encuestas y cuestionarios tratando de identificar características preponderantes del objeto de estudio, para modelar el estado actual de eventos. En ciencias de la computación podríamos desarrollar una herramienta basada en argumentación que sirva para modelar que puntos clave influir para cambiar la opinión pública. Las encuestas servirían tanto para entender a que debemos prestar atención como para validar luego los resultados.
+	- **Caso de estudio**: similar al monitoreo de proyectos, pero realizado con una profundidad mucho mayor.
+	- **Estudio de Campo**: chequear múltiples proyectos, de diversa naturaleza, y testear un aspecto común entre estos para distinguir diferencias en comportamiento.
 
-###### Métodos Empíricos Cualitativos
+#### Métodos Empíricos Cualitativos
 
 En estos métodos se evita la cuantificación. Los investigadores cualitativos, generalmente, hacen registros narrativos de los fenómenos que son estudiados mediante técnicas como la observación participante y las entrevistas no estructuradas. Describen o explican el fenómeno estudiado, la esencia, naturaleza y comportamiento, en pocas palabras, los métodos cualitativos implican la recopilación sistemática y la interpretación de datos no numéricos, incluyendo palabras, imágenes, percepciones, entre muchos otros.
 
-###### Métodos Empíricos Mixtos
+#### Métodos Empíricos Mixtos
 
-También llamados cuanti-cualitativos, ya que combinan métodos cuantitativos con cualitativos. Un caso típico es la denominada triangulación, esta técnica usa múltiples perspectivas para interpretar un
-conjunto de datos individual. Los cuatro tipos principales de triangulación son de: datos, investigador, teoría y metodológica.
+También llamados cuanti-cualitativos, ya que combinan métodos cuantitativos con cualitativos. Un caso típico es la denominada triangulación, esta técnica usa múltiples perspectivas para interpretar un conjunto de datos individual. Los cuatro tipos principales de triangulación son de: datos, investigador, teoría y metodológica.
 
->[!important] Conclusión
->Los criterios de clasificación que se han usado no son mutuamente excluyentes y que, en algunos casos, tampoco lo son las categorías dentro de un mismo criterio, esto hace que, en la realidad, no se utilicen métodos puros. Las investigaciones presentan características no de un sólo método sino de varios. Por ejemplo, una investigación puede utilizar el método hipotético- deductivo, ser preferentemente cuantitativa, y utilizar un método experimental controlado. En pocas palabras los objetivos del investigador y las características propias del problema a solucionar determinarán cuáles son los métodos más apropiados a utilizar.
+# Diferentes Visiones de la Información
 
----
-
-## Diferentes Visiones de la Información
-
-- La Informática como **Ciencia**. Va relacionada con la pregunta de ¿Cuál es la naturaleza de la computación y la información?. Se destaca entonces como una “ciencia de lo artificial” donde se realizan estudios experimentales de algoritmos, análisis teóricos de los algoritmos, y temas relacionados con las Arquitecturas y sistemas.
-- La Informática como **Ingeniería**. Está relacionada con la pregunta ¿Podemos construir productos TIC’s útiles?. Es una visión enfocada en el diseño, desarrollo, elaboración y mantenimiento de Hardware y/o Software, donde el software debe ser testeado y depurado. Siendo la ingeniería de software una herramienta que facilita el desarrollo rápido de sistemas confiables.
-- La Informática como **Matemática**. Relacionada con la pregunta de ¿Cuáles son las principales propiedades de los algoritmos?. Está más enfocada en el desarrollar nuevos formalismos, formulando y demostrando teoremas. Estudiando la complejidad computacional de los algoritmos, realizando verificación de programas, determinar y conocer los límites de la computación, y en generar teoremas como hipótesis y las demostraciones como evidencia.
-- La Informática como **Arte**. Construyendo sistemas divertidos para su propio beneficio, cambiando las cosas que piensas, haciendo cosas que pensabas imposibles. Proponiendo, argumentando y convenciendo a otros de teorías científicas, involucrando emociones, gustos, opiniones, etc. creando y generando así nuevas ciencias.
+- La Informática como **Ciencia**. Se destaca entonces como una “ciencia de lo artificial” donde se realizan estudios experimentales de algoritmos, análisis teóricos de los algoritmos, y temas relacionados con las Arquitecturas y sistemas.
+- La Informática como **Ingeniería**. Es una visión enfocada en el diseño, desarrollo, elaboración y mantenimiento de Hardware y/o Software, donde el software debe ser testeado y depurado. Siendo la ingeniería de software una herramienta que facilita el desarrollo rápido de sistemas confiables.
+- La Informática como **Matemática**. Está más enfocada en el desarrollar nuevos formalismos, formulando y demostrando teoremas. Estudiando la complejidad computacional de los algoritmos, realizando verificación de programas, determinar y conocer los límites de la computación, y en generar teoremas como hipótesis y las demostraciones como evidencia.
+- La Informática como **Arte**. Orientado a la construcción de sistemas divertidos para su propio beneficio, cambiando las cosas que piensas, haciendo cosas que pensabas imposibles. Proponiendo, argumentando y convenciendo a otros de teorías científicas, involucrando emociones, gustos, opiniones, etc. creando y generando así nuevas ciencias.
 
 En resumen, no existe una única visión de la Informática. Los investigadores tienden a tener una o dos visiones, pero no hay que ser absolutistas. En la práctica, la Informática es una mezcla, las ciencias puede generar nuevas ideas, las matemáticas las “limpian”, la ingeniería las transforma en sistemas confiables y la experimentación testea sus alcances y limitaciones.
 
+---
+
+>[!important] Conclusión
+>Los criterios de clasificación que se han usado no son mutuamente excluyentes y que, en algunos casos, tampoco lo son las categorías dentro de un mismo criterio, esto hace que, en la realidad, no se utilicen métodos puros. Las investigaciones presentan características no de un sólo método sino de varios. Por ejemplo, una investigación puede utilizar el método hipotético-deductivo, ser preferentemente cuantitativa, y utilizar un método experimental controlado. En pocas palabras los objetivos del investigador y las características propias del problema a solucionar determinarán cuáles son los métodos más apropiados a utilizar.
