Se termino de agregar las cosas de Memoria a SO y se agrego algunas cosas a tener en cuenta en estadística

--- a/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
+++ b/3° Año/Sistemas Operativos/Unidad 3/1. Introducción a Memoria.md
@@ -10,7 +10,7 @@ Debido a la incompatibilidad de algunos de los criterios para la creación de me
 ### Requerimientos para el Manejo de Memoria
 
 1. **Protección**: Cada uno de los procesos debe acceder únicamente a su espacio de direcciones
-2. **Transparencia**: Esto significa que a los usuarios y/o programadores, no le debe interesar en qué locación de memoria va a estar al momento de ejecución, ni tampoco en donde se va a guardar.
+2. **Transparencia**: Esto significa que el programador no necesita preocuparse por los detalles internos relacionados con la gestión de la memoria, no debe preocuparse de saber en qué locación de memoria va a estar el proceso al momento de ejecución, ni tampoco en donde se va a guardar.
 3. **Segmentos Múltiples**: Lógicamente, los programas están contiguos en memoria, pero físicamente los programas están fragmentados y dispersos por todo el disco duro.
 4. **Código Compartido:** Cuando se carga en memoria dos aplicaciones y estas comparten código
 
@@ -68,6 +68,8 @@ Las tablas de páginas invertidas tienen una entrada por cada página real de la
 >3. El Sistema Operativo busca un marco libre para la página a subir a memoria principal.
 >4. Se asigna el procesador a otro proceso.
 >5. Cuando la E/S termine el proceso pasará a estado de *listo*.
+>
+>La MMU al mismo tiempo, administra el TLB (Transition Looksido Buffer) que es una memoria caché que, contiene partes de las tablas de páginas de los procesos en ejecución y relaciona direcciones lógicas con físicas.
 
 Las tablas de páginas cuenta con una serie de bits que utilizan como indicadores para una serie de cuestiones, a continuación enumeraremos estos bits y sus usos:
 
@@ -79,10 +81,15 @@ Las tablas de páginas cuenta con una serie de bits que utilizan como indicadore
 - **Bit Modificado**: Cuando el bit es 1 nos indica que el marco asociado a la página ha sido modificado, cunado este es 0 índica que el marco asociado a la página no ha sido modificado.
 - **Bit de Referencia**: Este bit es utilizado por algunos algoritmos de reemplazo de página. Cuando el bit está en 1 indica que la página ha sido referenciada, y cunado el bit es 0 indica que la página no ha sido referenciada.
 
+>[!tldr] Hiperpaginación
+>La hiperpaginación o superpaginación se produce cuando el sistema operativo dedica más tiempo al intercambio de páginas que en la ejecución de los procesos de usuarios. Si un proceso cuenta con todas las páginas que necesita no hay hiperpaginación.
+
+Con el fin de evitar la hiperpaginación los sistemas operativos utilizan un ***conjunto de direcciones de trabajo*** (Working Set) que contiene a las páginas que son más referenciadas durante la ejecución del proceso, esto con el fin de evitar al máximo el fallo de página, aunque si la demanda total de marcos es mayor a la cantidad de marcos disponibles habrá hiperpaginación.
+En sí el conjunto de direcciones de trabajo es el conjunto de las $n$ páginas más activas o accedidas de un proceso, las cuales son almacenadas en memoria.
 ### Segmentación
 
 En el sistema de segmentación se toma a la memoria principal como un gran hueco en el que se puede ir colocando los diferentes procesos, en este esquema cada una de las rutinas pertenecientes al proceso son de tamaño variable, es por eso que el sistema operativo necesita almacenar un registro base y uno límite, en primer lugar por motivos de seguridad y en segundo lugar para saber cuando sé termina las instrucciones de una rutina.
-A nivel de implementación, todos los sistemas operativos que utilizan segmentación cuentan con una tabla de segmentos, que posee cada uno de los segmentos que se encuentran en memoria, esta tabla posee dos datos muy importantes, la base del segmento y su tamaño. En este esquema la siguiente instrucción a ejecutar está conformada por el siguiente par \<id_segmento, desplazamiento\>.
+A nivel de implementación, todos los sistemas operativos que utilizan segmentación cuentan con una tabla de segmentos, que posee cada uno de los segmentos que se encuentran en memoria, esta tabla posee dos datos muy importantes, la base del segmento y su tamaño. En este esquema la siguiente instrucción a ejecutar está conformada por el siguiente par **\<id_segmento, desplazamiento\>**.
 
 >[!tldr] Segmentación Paginada
 >En los sistemas operativos más modernos se utiliza un esquema de segmentación paginada, el programa se divido en distintos segmentos correspondientes a cada una de las rutinas del programa, al momento de subir esos segmentos a memoria el sistema operativo le asigna un conjunto de páginas en las que se va a ubicar el segmento.
@@ -99,4 +106,4 @@ A nivel de implementación, todos los sistemas operativos que utilizan segmentac
 - En el sistema de asociados, la memoria principal es partida a la mitad la cantidad de veces que sea necesario hasta que se llegue al mejor espacio posible para poder asignar un segmento.
 - La segmentación es visible al usuario, ya que los programadores pueden optimizar el código de forma tal de que ocupen mucho menos espacio en memoria.
 - La localidad espacial hace referencia a que después de ejecutar una instrucción, lo más probable es que se ejecute al siguiente. Y la localidad temporal se refiere a que en una rutina puede que se repita la ejecución de determinadas instrucciones, un número determinado de veces.
-- En los sistemas por demanda el procesador se va pidiendo las instrucciones a medida que el procesador las va solicitando, en el sistema de predicción se sube un grupo de instrucciones/datos al mismo tiempo, esto produce polución en los distintos niveles de cache.
+- En los sistemas por demanda el procesador va pidiendo las instrucciones a medida que el procesador las va solicitando, en el sistema de predicción se sube un grupo de instrucciones/datos al mismo tiempo, esto produce polución en los distintos niveles de cache.
